--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "tailwindcss": "^3.1.0",
         "vite": "^3.0.0",
         "vue": "^3.2.31"
+    },
+    "dependencies": {
+        "yubinbango-core": "^0.6.3",
+        "yubinbango-core2": "^0.6.3"
     }
 }
